<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.carselection.carselector.mainActivity.summary.SummaryFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/aboutme"
        android:layout_centerInParent="true"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/summaryTitle"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/summaryTitleBackground">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/summaryPageTitle"
                    android:textSize="@dimen/summaryTitleFontSize"
                    android:textStyle="bold" />
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/summaryTitle"
                android:layout_margin="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fieldHeight"
                    android:layout_above="@id/type_layout">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@id/separatorManufac"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignRight="@id/separatorManufac"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/summaryManufacturerLabel" />

                    <FrameLayout
                        android:id="@+id/separatorManufac"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:background="@color/fieldSeparatorColor" />

                    <TextView
                        android:id="@+id/summary_manufacturer_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/separatorManufac"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignStart="@id/separatorManufac"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        tools:text="VALUE" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/type_layout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fieldHeight"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@id/separatorType"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignRight="@id/separatorType"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/summaryMainTypeLabel" />

                    <FrameLayout
                        android:id="@+id/separatorType"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:background="@color/fieldSeparatorColor" />

                    <TextView
                        android:id="@+id/summary_maintype_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/separatorType"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignStart="@id/separatorType"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        tools:text="VALUE" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fieldHeight"
                    android:layout_below="@id/type_layout">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@id/separator_builtdate"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignRight="@id/separator_builtdate"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/summaryBuiltDateLabel" />

                    <FrameLayout
                        android:id="@+id/separator_builtdate"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:background="@color/fieldSeparatorColor" />

                    <TextView
                        android:id="@+id/summary_builtdate_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/separator_builtdate"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignStart="@id/separator_builtdate"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        tools:text="VALUE" />
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/aboutme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/aboutme" />
</RelativeLayout>
